# portal-schema

./: .gitignore  CLAUDE.md  Cargo.toml
migrations/: V1__initial_schema.sql  V2__data_circuits.sql  V2__support_tickets.sql
src/: gen_oui_seed.rs  main.rs  oui.rs
